--- a/charts/sonarqube/templates/serviceaccount.yaml
+++ b/charts/sonarqube/templates/serviceaccount.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
 {{- if .Values.serviceAccount.name }}
-  name: {{ .Values.serviceAccount.name }}
+  name: {{ .Values.serviceAccount.name }}-serviceaccount
 {{- else  }}
   name: {{ include "sonarqube.fullname" . }}
 {{- end }}
