--- a/charts/sonarqube/templates/service.yaml
+++ b/charts/sonarqube/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "sonarqube.fullname" . }}
+  name: {{ template "sonarqube.fullname" . }}-service
   labels:
     app: {{ template "sonarqube.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
@@ -20,7 +20,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.externalPort }}
-      targetPort: http
+      targetPort: {{ .Values.service.internalPort }}
       protocol: TCP
       name: http
       {{- if .Values.service.nodePort }}
